--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <li class="navfry"><a href="#">options</a></li>
             <li class="navfry"><a href="#">slave shop lol</a></li>
             <div class="search">
-                <input type="text" name="search1" id="search1" placeholder="search here">
+                <input type="text" name="search1" id="search1" placeholder="search">
             </div>
         </ul>
 
